# tangram

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .prettierignore  .prettierrc.cjs  Cargo.toml  Makefile  README.md  build.rs  cat  justfile  other.tg  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tangram.tg
.cargo/: config.toml
assets/: busybox_amd64_linux  busybox_arm64_linux  env_amd64_linux  global.js  global.js.map  runtime.js  runtime.js.map  sh_arm64_linux
scripts/: alias  alias.bash
src/: any.rs  api.rs  array.rs  artifact.rs  blob.rs  bool.rs  build.rs  builder.rs  bundle.rs  bytes.rs  cache.rs  checkin.rs  checkout.rs  checksum.rs  clean.rs  client.rs  config.rs  constants.rs  credentials.rs  database.rs  directory.rs  dirs.rs  document.rs  error.rs  evaluate.rs  evaluation.rs  expression.rs  file.rs  fragment.rs  function.rs  gc.rs  handle.rs  hash.rs  heuristics.rs  id.rs  instance.rs  kind.rs  lib.rs  lock.rs  lockfile.rs  (+37 more)
src/api/: client.rs  login.rs  mod.rs  package.rs
src/api_client/: login.rs  mod.rs  package.rs
src/archive/: mod.rs  writer.rs
src/artifact/: add.rs  bundle.rs  checkin.rs  checkout.rs  checksum.rs  data.rs  dependency.rs  directory.rs  file.rs  get.rs  hash.rs  mod.rs  references.rs  serialize.rs  symlink.rs  tracker.rs  util.rs  vendor.rs
src/blob/: add.rs  copy.rs  data.rs  get.rs  hash.rs  mod.rs  new.rs  reader.rs
src/block/: get.rs  mod.rs  new.rs  reader.rs  store.rs
src/call/: context.rs  data.rs  error.rs  exception.rs  isolate.rs  mod.rs  module.rs  new.rs  run.rs  state.rs  syscall.rs
src/checksum/: algorithm.rs  artifact.rs  encoding.rs  mod.rs  serialize.rs  writer.rs
src/cli/: client.rs  config.rs  credentials.rs  dirs.rs  error.rs  main.rs  util.rs
src/client/: artifact.rs  autoshell.rs  blob.rs  block.rs  cache.rs  checkin.rs  checkin_package.rs  checkout.rs  config.rs  evaluate.graphql  evaluate.rs  expression.rs  gc.rs  login.rs  mod.rs  object_cache.rs  operation.rs  output.rs  package.rs  pull.rs  push.rs  repl.graphql  repl.rs  reqwest.rs  transport.rs  user.rs
src/clients/: blob.rs
src/command/: basic.rs  builder.rs  data.rs  error.rs  linux.rs  macos.rs  mod.rs  new.rs  run.rs  sandbox_disabled.rs  server.rs
src/commands/: add.rs  autoenv.rs  autoshell.rs  blob.rs  build.rs  check.rs  checkin.rs  checkout.rs  checksum.rs  clean.rs  doc.rs  download.rs  dump_metadata.rs  env.rs  exec.rs  expression.rs  fmt.rs  gc.rs  init.rs  lint.rs  login.rs  lsp.rs  mod.rs  new.rs  outdated.rs  publish.rs  pull.rs  push.rs  remove.rs  run.rs  search.rs  serve.rs  shell.rs  update.rs  upgrade.rs
src/compiler/: build.js  check.rs  check.ts  completion.rs  completion.ts  definition.rs  definition.ts  diagnostics.rs  diagnostics.ts  exception.rs  files.rs  format.rs  format.ts  hover.rs  hover.ts  load.rs  main.js  main.ts  metadata.rs  mod.js  mod.rs  mod.ts  module_identifier.rs  module_specifier.rs  node_global.js  package-lock.json  package.json  position.rs  range.rs  references.rs  references.ts  rename.rs  rename.ts  request.rs  request.ts  resolve.rs  syscall.d.ts  syscall.rs  tangram.d.ts  transpile.rs  (+6 more)
src/database/: mod.rs
src/directory/: builder.rs  data.rs  get.rs  mod.rs  new.rs
src/download/: builder.rs  data.rs  mod.rs  new.rs  run.rs  unpack.rs
src/evaluate/: array.rs  dependency.rs  directory.rs  download.rs  map.rs  mod.rs  package.rs  resource.rs  template.rs
src/evaluators/: array.rs  fetch.rs  mod.rs  primitive.rs  target.rs
src/file/: builder.rs  data.rs  mod.rs  new.rs
src/function/: call.rs  context.rs  data.rs  error.rs  exception.rs  mod.rs  module.rs  new.rs  state.rs  syscall.rs
src/fuse/: abi.rs  argument.rs  fs.rs  mod.rs  request.rs  response.rs  server.rs
src/global/: array.ts  artifact.ts  assert.ts  blob.ts  block.ts  build.js  bundle.ts  call.ts  checksum.ts  command.ts  context.ts  dependency.ts  directory.ts  download.ts  encoding.ts  env.ts  error.ts  file.ts  function.ts  include.ts  log.ts  main.ts  map.ts  mod.d.ts  mod.js  mod.ts  module.ts  operation.ts  package-lock.json  package.json  package.ts  path.ts  placeholder.ts  process.ts  reference.ts  resolve.ts  resource.ts  symlink.ts  syscall.d.ts  syscall.ts  (+10 more)
src/hash/: hasher.rs  mod.rs  writer.rs
src/id/: mod.rs  writer.rs
src/instance/: clean.rs  language.rs  lock.rs  mod.rs  module.rs  operations.rs  run.rs
src/language/: analyze.rs  check.rs  completion.rs  definition.rs  diagnostics.rs  doc.rs  docs.rs  document.rs  format.rs  hover.rs  import.rs  imports.rs  load.rs  location.rs  metadata.rs  mod.rs  module.rs  parse.rs  position.rs  range.rs  references.rs  rename.rs  resolve.rs  symbols.rs  transpile.rs  version.rs
src/log/: mod.rs
src/lsp/: .eslintignore  build.js  check.rs  completion.rs  definition.rs  diagnostics.rs  docs.rs  document.rs  error.rs  eslint.ts  files.rs  format.rs  format.ts  formatting.rs  hover.rs  hover.ts  initialize.rs  main.ts  mod.rs  module.rs  module.ts  references.rs  rename.rs  symbols.rs  syscall.rs  syscall.ts  types.rs  typescript.ts  util.rs  virtual_text_document.rs
src/migrations/: migration_0000.rs  mod.rs
src/module/: analyze.rs  dependency.rs  diagnostic.rs  document.rs  error.rs  identifier.rs  import.rs  load.rs  mod.rs  parse.rs  path.rs  position.rs  resolve.rs  specifier.rs  tracker.rs  transpile.rs  version.rs
src/operation/: add.rs  children.rs  data.rs  error.rs  evaluate.rs  get.rs  hash.rs  mod.rs  output.rs  run.rs  serialize.rs
src/os/: dirs.rs  fs.rs  mod.rs  path.rs
src/package/: add.rs  analyze.rs  checkin.rs  dependency.rs  get.rs  hash.rs  identifier.rs  instantiate.rs  lockfile.rs  metadata.rs  mod.rs  path.rs  resolve.rs  serialize.rs  specifier.rs  tracker.rs
src/path/: component.rs  diff.rs  mod.rs  subpath.rs
src/placeholder/: data.rs  mod.rs
src/process/: builder.rs  client.rs  data.rs  error.rs  linux.rs  macos.rs  mod.rs  mount.rs  new.rs  run.rs  server.rs
src/resource/: builder.rs  data.rs  download.rs  error.rs  mod.rs  new.rs  unpack.rs
src/run/: js.rs  (+4 more)
(+362 files in other folders)
